# shifu_sdk

./: README.md
.github/workflows/: ci.yml  test.yaml
shifu-sdk-golang/: README.md  go.mod  go.sum  sdk.go  sdk_test.go
shifu-sdk-python/: README.md  pyproject.toml
shifu-sdk-python/.github/workflows/: ci.yml  test.yaml
shifu-sdk-python/examples/: Dockerfile  basic.py  deviceshifu_example.py
shifu-sdk-python/examples/k8s/: deployment.yaml  edgedevice.yaml
shifu-sdk-python/src/shifu_sdk/: __init__.py  core.py
shifu-sdk-python/tests/: test_configmap_functions.py  test_edgedevice_functions.py  test_edgedevice_obj_functions.py  test_imports.py
